[生产者和消费者的公共资源增加]

--- a/GbMediaServer/CMakeLists.txt
+++ b/GbMediaServer/CMakeLists.txt
@@ -109,6 +109,8 @@ FILE(GLOB    Media_source
 	 producer/*.cpp 
 	 utils/*.h 
 	 utils/*.cpp 
+	 share/*.h
+	 share/*.cpp 
 )
  
 file(GLOB GbMediaServer_source
