--- a/WebServer/conf/nginx.conf
+++ b/WebServer/conf/nginx.conf
@@ -56,21 +56,21 @@ http {
 			add_header 'Access-Control-Allow-Headers' '*' always;
 		 
 			# 处理 OPTIONS 请求
-			if ($request_method = 'OPTIONS') {
-				add_header 'Access-Control-Allow-Origin' '*';
-				add_header 'Access-Control-Allow-Credentials' 'true';
-				add_header 'Access-Control-Allow-Methods' 'POST, GET, PUT, OPTIONS, DELETE';
-				add_header 'Access-Control-Allow-Headers' '*';
-				add_header 'Access-Control-Max-Age' 1728000;
-				add_header 'Content-Length' 0;
-				add_header 'Content-Type' 'text/plain; charset=utf-8';
-				return 200;
-				}
+			# if ($request_method = 'OPTIONS') {
+			# 	add_header 'Access-Control-Allow-Origin' '*';
+			# 	add_header 'Access-Control-Allow-Credentials' 'true';
+			# 	add_header 'Access-Control-Allow-Methods' 'POST, GET, PUT, OPTIONS, DELETE';
+			# 	add_header 'Access-Control-Allow-Headers' '*';
+			# 	add_header 'Access-Control-Max-Age' 1728000;
+			# 	add_header 'Content-Length' 0;
+			# 	add_header 'Content-Type' 'text/plain; charset=utf-8';
+			# 	return 200;
+			# 	}
 		 
 			# 转发其他请求到后端服务器
 			#proxy_pass https://your-backend-server; 
 			rewrite ^/rtc/(.*)$ /$1 break;
-			proxy_pass http://127.0.0.1:8001;
+			proxy_pass http://127.0.0.1:8001/rtc/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
