--- a/GbMediaServer/CMakeLists.txt
+++ b/GbMediaServer/CMakeLists.txt
@@ -131,9 +131,7 @@ file(GLOB GbMediaServer_source
 #)
 
 #add_subdirectory(swagger)
-#
-#add_subdirectory(curl-7.81.0)
-#add_subdirectory(D:/Work/rtc/crtcserver/deps/curl-7.81.0)
+ 
 #add_subdirectory(libsip)
  
 add_executable(${PROJECT_NAME}     ${GbMediaServer_source}  ${Media_source}   )
@@ -142,46 +140,15 @@ add_dependencies(${PROJECT_NAME} libmedia_transfer_protocol)
 # add_dependencies(${PROJECT_NAME} libsip)
 
 set(ALL_LIB 
-			#libswagger
-			#libswagger
-			#libsip 
-			Dnsapi.lib   
-			delayimp.lib
-			ws2_32.lib
-			 Qwave.lib
-			 crypt32.lib
-			iphlpapi.lib
-			secur32.lib
-			 #
-			# oatpp
-			# oatpp-sqlite
-			# oatpp-swagger
-			# sqlite
-			crypt32.lib
-			iphlpapi.lib
-			secur32.lib
-			 # absl 
-			# abseil_dll
-			# Meida_LIB
-		#absl_cordz_functions
-		#absl_cordz_handle
-		#absl_cordz_info
-		#absl_cordz_sample_token
-		#absl_flags
-		#absl_flags_commandlineflag_internal
-		#absl_flags_internal
-		#absl_flags_marshalling
-		#absl_flags_parse
-		#absl_flags_private_handle_accessor
-		#absl_flags_program_name
-		#absl_flags_reflection
-		#absl_flags_usage
-		#absl_flags_usage_internal
-		#absl_low_level_hash
-		#absl_random_internal_distribution_test_util
-		api 
+			 
+			api 
+			libice
+		libp2p_peerconnection 
+		libmedia_codec 
+		libmedia_transfer_protocol
+		#libcross_platform_collection_render
 			audio_device
-			audio_processing
+			#audio_processing
 			desktop_capture
 			video_capture
 			video_coding
@@ -198,29 +165,10 @@ set(ALL_LIB
 			rtc_base
 		 
 				  
-				  iphlpapi.lib
-		#crypto32.lib 
-		ws2_32   
-		crypt32
-		Shell32.lib
-		 advapi32
-              iphlpapi
-              psapi
-              shell32
-              user32
-              userenv
-              ws2_32
-			  mswsock.lib
-			  #  webrtc  timeGetTime  
-			  winmm.lib
-			  #ucrt.lib
-			  #  libuv.lib  的依赖库
-			  dbghelp.lib
+  
 
-			  libmedia_transfer_protocol
-
-			  libcrypto
-		libssl
+			  crypto
+				ssl
 				 
 
 
@@ -232,50 +180,27 @@ set(ALL_LIB
 				 opus
 				 libsrtp2
 				 x264
-		 
-		 crypt32.lib
-		iphlpapi.lib
-       secur32.lib
-		 
-
-		libice
-		libp2p_peerconnection 
-
-		libmedia_transfer_protocol
-		libsrtp2
-		libmedia_codec
-		#libx264.lib
-		x264
-
-		
-		#libx264.lib
-		#libx264d.lib
-	#libx264.dll.lib
-	#libx264.lib
-
-	 
-
-
-	d3d11.lib
-      dxgi.lib
-	jpeg-static
+		   jpeg-static
 		
 
 		#curl 
 		jsoncpp_static
-	       dmoguids.lib
-          wmcodecdspuuid.lib
-        amstrmid.lib
-         msdmo.lib
-        oleaut32.lib
-		opus
-		
-libcross_platform_collection_render
+		 
+		 
+
 	 
-		ole32.lib
-        oleaut32.lib
-        strmiids.lib
-        user32.lib
+
+
+		  
+	 
+		vpx
+		
+		yaml_cpp
+		 
+		usrsctp
+
+	 
+		 
 		 
 		#abseil_dll
 		absl_cordz_functions
@@ -294,38 +219,62 @@ libcross_platform_collection_render
 		absl_flags_usage_internal
 		absl_low_level_hash
 		absl_random_internal_distribution_test_util
-		jpeg-static
 		
+			)
 
-		#curl 
-		jsoncpp_static
-		#libcurl
-		# curl 
+if (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    message(STATUS "current platform: windows")
+    set(WIN_LIB 
+	     audio_processing
+		 vpx_asm
+		Dnsapi.lib   
+			delayimp.lib
+			ws2_32.lib
+			 Qwave.lib
+			 crypt32.lib
+			iphlpapi.lib
+			secur32.lib
+			crypt32.lib
+			iphlpapi.lib
+			secur32.lib
+			 iphlpapi.lib
+		 
+		ws2_32   
+		crypt32
+		Shell32.lib
+		 advapi32
+              iphlpapi
+              psapi
+              shell32
+              user32
+              userenv
+              ws2_32
+			  mswsock.lib
+			  #  webrtc  timeGetTime  
+			  winmm.lib  
+			  dbghelp.lib
+		 crypt32.lib
+		iphlpapi.lib
+       secur32.lib
+	   d3d11.lib
+      dxgi.lib
+	  	 dmoguids.lib
+          wmcodecdspuuid.lib
+        amstrmid.lib
+         msdmo.lib
+        oleaut32.lib
+
 		Ws2_32.lib
 		Wldap32.lib
-		# api
-		 
-
-		d3d11.lib
-      dxgi.lib
-		
- 
-
-			Imm32 
+	 Imm32 
 			comctl32
 			ws2_32.lib
 			winmm.lib
 
 
 			yuv
-		libcrypto.lib 
-		libssl.lib 
-		#
-		##libredis.lib
-		#libzmalloc.lib
-		iphlpapi.lib
-		#crypto32.lib 
-		ws2_32   
+		#libcrypto.lib 
+		#libssl.lib 
 		crypt32
 		Shell32.lib
 		 advapi32
@@ -341,50 +290,31 @@ libcross_platform_collection_render
 			  #ucrt.lib
 			  #  libuv.lib  的依赖库
 			  dbghelp.lib
-
-		 
-
-		libice
-		libp2p_peerconnection 
-
-		libmedia_transfer_protocol
-		libsrtp2
-		libmedia_codec
-		#libx264.lib
-		x264
-
-		
-		#libx264.lib
-		#libx264d.lib
-	#libx264.dll.lib
-	#libx264.lib
-
- 			
-	
-
-
-
-	       dmoguids.lib
+			   dmoguids.lib
           wmcodecdspuuid.lib
         amstrmid.lib
          msdmo.lib
         oleaut32.lib
-		opus
-		 
-		libvpx.lib
-		libvpx_asm.lib
+	)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
+	message(STATUS "current platform: unix")
+    set(LINUX_LIB 
+		m 
+		dl
+      rt
+	)
 
-		yaml_cpp
-		 
-		usrsctp
-
-			)
+endif()
  
-target_link_libraries(${PROJECT_NAME}   ${ALL_LIB} )
+target_link_libraries(${PROJECT_NAME}   ${ALL_LIB}   
+
+	${WIN_LIB}
+	${LINUX_LIB}
+)
 
 #set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /SAFESEH:NO")
 			# Console (/SUBSYSTEM:CONSOLE)
-set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE /SAFESEH:NO")
+#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE /SAFESEH:NO")
 
 set(AllFile 
 ${GbMediaServer_source} 
