--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,5 @@ include_directories(
 )
 
 #add_subdirectory(libswagger)
-add_subdirectory(GbSipServer)
+#add_subdirectory(GbSipServer)
 add_subdirectory(GbMediaServer) 
